Se agrego fhymeleaf fragmets: header, menu, breadcrumb. Se agregaron vistas de thymeleaf home, users/create. Se agrego controlador UserController. Se creo archivo de configuracion para leer nombre de aplicacion desde application.propertoes

--- a/src/main/resources/sass/styles.scss
+++ b/src/main/resources/sass/styles.scss
@@ -2,4 +2,8 @@
 
 // customizations
 
+$section-padding:  1.8rem 1.5rem;
+$body-background-color:#eeeeee;
+$dropdown-content-z: 50;
+
 @import "../node_modules/bulma/bulma.sass";
