Se modifico test para cargar roles en la creacion del usaurio. Se prepara vista para mostar catalogo de roles a asignar al usuario

--- a/src/main/resources/templates/users/create.html
+++ b/src/main/resources/templates/users/create.html
@@ -118,6 +118,18 @@
                                 </div>
                             </div>
                             <div class="field is-horizontal">
+                                <div class="field-label is-normal">
+                                    <label class="label" for="roles" th:text="#{ui.users.create.form.roles}"></label>
+                                </div>
+                                <div class="field-body">
+                                    <div class="field">
+                                        <div class="control">
+                                            roles
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="field is-horizontal">
                                 <div class="field-label"></div>
                                 <div class="field-body">
                                     <div class="field">
