Se agrego metodo para obtener Role por id a repositorio y capa de servicoo. Se utilia BCrypt para enctyptar el password de lo usuarios. Se modifica formulario de creacion de usuarios para soportar aagregar varios roles con multiple select.

--- a/src/main/resources/templates/users/create.html
+++ b/src/main/resources/templates/users/create.html
@@ -124,7 +124,12 @@
                                 <div class="field-body">
                                     <div class="field">
                                         <div class="control">
-                                            roles
+                                            <div class="lselect is-multiple">
+                                                <select multiple th:size="${allRoles.size()}" name="userRoles">
+                                                    <option th:each="role : ${allRoles}" th:value="${role.id}"
+                                                        th:text="${role.role}"></option>
+                                                </select>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
