--- a/src/main/resources/templates/fragments/menus.html
+++ b/src/main/resources/templates/fragments/menus.html
@@ -16,6 +16,7 @@
                <a class="navbar-link" th:text="#{ui.menu.navbar.users}"></a>
                <div class="navbar-dropdown">
                    <a class="navbar-item" th:text="#{ui.menu.navbar.users.create}" th:href="@{/users/create}"></a>
+                   <a class="navbar-item" th:text="#{ui.menu.navbar.users.index}" th:href="@{/users}"></a>
                </div>
            </div>
        </div></viv>
