Se agrego funcionalidad para crear ciclos escolares. Cambio incluye: Repositorio y capa de Servicio CycleRepository y CycleService con su respectiva implementacion. Test para capa de datos y servicio en el metodo addCycle. Controlador y vista asociada. Cambio en el menu para agregar acceso a la pagina de crear ciclos. Se modifica messages_es para agregar textos en espaniol

--- a/src/main/resources/templates/fragments/menus.html
+++ b/src/main/resources/templates/fragments/menus.html
@@ -19,6 +19,12 @@
                    <a class="navbar-item" th:text="#{ui.menu.navbar.users.index}" th:href="@{/users}"></a>
                </div>
            </div>
+           <div class="navbar-item has-dropdown is-hoverable">
+               <a class="navbar-link" th:text="#{ui.menu.navbar.cycles}"></a>
+               <div class="navbar-dropdown">
+                   <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.create}" th:href="@{/cycles/create}"></a>
+               </div>
+           </div>
        </div></viv>
     </nav>
     
