Se agrega funcionalidad para listar ciclos escolares. Se agrego metodo para listar ciclos escolares paginados en capa de servicio. Se agrego test de integracion para la capa de servicios en el nuevo metodo listar ciclos paginados. Se agrega controlador, vistas y mensajes de lenguaje espaniol.

--- a/src/main/resources/templates/fragments/menus.html
+++ b/src/main/resources/templates/fragments/menus.html
@@ -23,6 +23,7 @@
                <a class="navbar-link" th:text="#{ui.menu.navbar.cycles}"></a>
                <div class="navbar-dropdown">
                    <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.create}" th:href="@{/cycles/create}"></a>
+                   <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.index}" th:href="@{/cycles}"></a>
                </div>
            </div>
        </div></viv>
