Correcciones visuales menores en algunas vistas. Se agrego un test

--- a/src/main/resources/templates/cycles/edit.html
+++ b/src/main/resources/templates/cycles/edit.html
@@ -6,7 +6,7 @@
 
     <ul id="crumbs">
         <li><a th:href="@{/cycles}" th:text="#{ui.breadcrumb.cycles}"></a></li>
-        <li><a th:href="@{/cycles}" th:text="#{ui.breadcrumb.cycles.edit}"></a></li>
+        <li class="is-active"><a th:href="@{/cycles}" th:text="#{ui.breadcrumb.cycles.edit}"></a></li>
     </ul>
 
     <section class="section">
