--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
     th:replace="layouts/template :: userTemplate(#{ui.users.index.window.title}, _, ~{::#breadcrumb}, ~{::section}, _)">
+
 <body>
     <ul id="breadcrumb">
         <li class="is-active"><a href="#" th:text="#{ui.users.index.window.title}"></a></li>
@@ -31,7 +32,8 @@
                                         <span class="tag" th:each="role : ${user.roles}" th:text="${role.role}"></span>
                                     </td>
                                     <td>
-                                        <a class="button is-primary is-light" th:href="@{/users/{userId}/edit(userId=${user.id})}">
+                                        <a class="button is-primary is-light"
+                                            th:href="@{/users/{userId}/edit(userId=${user.id})}">
                                             <span class="icon">
                                                 <i class="fas fa-edit"></i>
                                             </span>
