--- a/src/main/resources/templates/fragments/menus.html
+++ b/src/main/resources/templates/fragments/menus.html
@@ -2,31 +2,39 @@
 <body xmlns:th="http://www.thymeleaf.org">
 
     <nav th:fragment="userNavbar" class="navbar is-light" role="navigation">
-        <viv class="container">
-       <div class="navbar-brand">
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarToggle">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-       </div> 
-       <div id="navbarToggle" class="navbar-menu">
-           <a class="navbar-item" th:text="#{ui.menu.navbar.home}"></a>
-           <div class="navbar-item has-dropdown is-hoverable">
-               <a class="navbar-link" th:text="#{ui.menu.navbar.users}"></a>
-               <div class="navbar-dropdown">
-                   <a class="navbar-item" th:text="#{ui.menu.navbar.users.create}" th:href="@{/users/create}"></a>
-                   <a class="navbar-item" th:text="#{ui.menu.navbar.users.index}" th:href="@{/users}"></a>
-               </div>
-           </div>
-           <div class="navbar-item has-dropdown is-hoverable">
-               <a class="navbar-link" th:text="#{ui.menu.navbar.cycles}"></a>
-               <div class="navbar-dropdown">
-                   <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.create}" th:href="@{/cycles/create}"></a>
-                   <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.index}" th:href="@{/cycles}"></a>
-               </div>
-           </div>
-       </div></viv>
+        <div class="container">
+            <div class="navbar-brand">
+                <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarToggle">
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                    <span aria-hidden="true"></span>
+                </a>
+            </div> 
+            <div id="navbarToggle" class="navbar-menu">
+                <a class="navbar-item" th:text="#{ui.menu.navbar.home}"></a>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link" th:text="#{ui.menu.navbar.users}"></a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" th:text="#{ui.menu.navbar.users.create}" th:href="@{/users/create}"></a>
+                        <a class="navbar-item" th:text="#{ui.menu.navbar.users.index}" th:href="@{/users}"></a>
+                    </div>
+                </div>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link" th:text="#{ui.menu.navbar.cycles}"></a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.create}" th:href="@{/cycles/create}"></a>
+                        <a class="navbar-item" th:text="#{ui.menu.navbar.cycles.index}" th:href="@{/cycles}"></a>
+                    </div>
+                </div>
+                <div class="navbar-item has-dropdown is-hoverable">
+                    <a class="navbar-link" th:text="#{ui.menu.navbar.classrooms}"></a>
+                    <div class="navbar-dropdown">
+                        <a class="navbar-item" th:text="#{ui.menu.navbar.classrooms.index}" th:href="@{/classrooms}"></a>
+                        <a class="navbar-item" th:text="#{ui.menu.navbar.classrooms.create}" th:href="@{/classrooms/create}"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </nav>
     
 </body>
