--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -107,7 +107,7 @@
                                             <div class="select is-multiple">
                                                 <select multiple th:field="*{roleIds}">
                                                     <option th:each="role : ${roles}" th:value="${role.id}"
-                                                        th:text="${role.role}"></option>
+                                                        th:text="${role.name}"></option>
                                                 </select>
                                             </div>
                                         </div>
